# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qirabot/: __init__.py  _transport.py  actions.py  client.py  exceptions.py  task_context.py
tests/: test_actions.py  test_client.py  test_exceptions.py  test_task_context.py  test_transport.py
